Fixing messed up footer on small screens.

--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -57,7 +57,7 @@ main.site {
 }
 
 footer.site {
-	height: @footer-height;
+	min-height: @footer-height;
 	background-color: @gray-darker;
 	.text-muted();
 	font-size: @font-size-small;
